--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "poppins","sans-serif" ;
+    font-family: "poppins", "sans-serif";
 }
 
-body{
+body {
     background-color: #002339;
     color: #ffffff;
 }
 
-.container{
+.container {
     margin: 12%;
     width: 90%;
     max-width: 700px;
 }
 
-.display{
+.display {
     width: 100%;
     margin-top: 50px;
     margin-bottom: 30px;
-    background:#fff;
+    background: #fff;
     color: #333;
     display: flex;
     align-items: center;
@@ -29,35 +29,34 @@ body{
     border-radius: 5px;
 }
 
-.container h1{
+.container h1 {
+    font-size: 45px;
     font-weight: 900;
-    font: size 45px;;
 }
 
-.container h1 span{
+.container h1 span {
     color: #019f55;
     border-bottom: 4px solid #019f55;
     padding-bottom: 7px;
 }
 
-.display img{
+.display img {
     width: 30px;
     position: relative;
     cursor: pointer;
 }
 
-.display input{
+.display input {
     border: 0;
     outline: 0;
     font-size: 24px;
 }
 
-.container button img{
-    width: 28px;
+.container button span {
     margin-right: 10px;
 }
 
-.container button{
+.container button {
     border: 0;
     outline: 0;
     background-color: #019f55;
@@ -66,17 +65,12 @@ body{
     font-weight: 300;
     display: flex;
     align-items: center;
-    justify-self: center;
+    justify-content: center;
     padding: 16px 26px;
     border-radius: 5px;
-    padding: 16px 26px;
-
-
-
 }
-
 #copyIcon {
-    width: 20px; 
+    width: 20px;
     height: auto;
     margin-left: 0px;
     cursor: pointer;
